--- a/client/.env.production
+++ b/client/.env.production
@@ -1,5 +1,5 @@
 # Production - Vercel Deployment
-REACT_APP_API_URL=https://your-backend.onrender.com/api
+REACT_APP_API_URL=https://ticket-booking-uppo.onrender.com/api
 REACT_APP_RAZORPAY_KEY_ID=rzp_live_your_production_key
 
 # Build Configuration
