--- a/client/.env.production
+++ b/client/.env.production
@@ -1,6 +1,5 @@
 # Production - Vercel Deployment
-REACT_APP_API_URL=https://ticket-booking-uppo.onrender.com/api
-REACT_APP_RAZORPAY_KEY_ID=rzp_live_your_production_key
+REACT_APP_API_URL=https://ticket-booking-fvdf.vercel.app/api
 
 # Build Configuration
 DISABLE_ESLINT_PLUGIN=true
